Back button fixes (#4572)
* Don't show the back button on the first task

* Fix the unnecessary extra margin in the back button

* Fix style issues. Fix when back button warning shows

--- a/css/classify.styl
+++ b/css/classify.styl
@@ -100,6 +100,7 @@
       flex: 1 1 auto
 
   .task-container
+    margin-bottom: 1.3333rem
     padding: 0 2em 0 2em
 
   .subject
